<resources>
    <string name="app_name">BKI</string>
    <string name="kadin">Kadın</string>
    <string name="erkek">Erkek</string>
    <string name="boy_tv">Boy</string>
    <string name="kilo_tv">Kilo</string>
    <string name="cinsiyet">Cinsiyet</string>
    <string name="ideal_kilo_tv">İdeal Kilo</string>
    <string name="durum_tv">Durum</string>
    <string name="zayif">Zayıf Kilodasınız</string>
    <string name="ideal">Normal Kilodasınız.</string>
    <string name="idealden_fazla">İdeal Kilonuzun Üzerindesiniz.</string>
    <string name="fazla">İdeal Kilonuzdan Çok Daha Fazla Kilodasınız</string>
    <string name="obez">Obezitesiniz.Doktora Başvurun!</string>
</resources>