<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:orientation="horizontal"
    android:padding="@dimen/padding_grid"
    android:useDefaultMargins="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:padding="@dimen/padding_tv"
        android:text="@string/boy_tv" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:digits="0123456789"
        android:maxLength="3"
        android:inputType="number">
        <requestFocus/>
    </EditText>

    <TextView
        android:id="@+id/boy_tv"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="#BBB0CD"
        android:padding="@dimen/padding_tv" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:padding="@dimen/padding_tv"
        android:text="@string/kilo_tv" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="wrap_content"
        android:layout_height="49dp"
        android:layout_row="1"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:padding="@dimen/padding_tv"
        android:progress="20"/>

    <TextView
        android:id="@+id/kilo_tv"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="1"
        android:padding="@dimen/padding_tv"
        android:text="50 kg" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="164dp"
        android:layout_height="41dp"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:padding="@dimen/padding_tv"
        android:text="@string/cinsiyet" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/kadin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/kadin" />

        <RadioButton
            android:id="@+id/erkek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/erkek" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView12"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="0"
        android:layout_gravity="right|center_vertical"
        android:padding="@dimen/padding_tv"
        android:text="@string/ideal_kilo_tv" />

    <TextView
        android:id="@+id/ideal_kilo_tv"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_row="4"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="#B393B8"
        android:padding="@dimen/padding_tv"
         />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="0"
        android:layout_gravity="right"
        android:padding="@dimen/padding_tv"
        android:text="@string/durum_tv" />

    <TextView
        android:id="@+id/durum_tv"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_row="5"
        android:layout_column="1"
        android:layout_gravity="fill_horizontal"
        android:background="#A9B0D3"
        android:padding="@dimen/padding_tv"
         />



</GridLayout>